k8s/ingestion-service.yaml
  apiVersion: apps/v1
  kind: Deployment                                                              
  metadata:                                                                     
    name: ingestion-service                                                     
  spec:                                                                         
    replicas: 1   
    selector:
      matchLabels:
        app: ingestion-service
    template:                                                                   
      metadata:
        labels:                                                                 
          app: ingestion-service
      spec:
        containers:
          - name: ingestion-service
            image: aq150/ingestion-service:latest
