k8s/backend-api.yaml
  apiVersion: apps/v1                                                           
  kind: Deployment                                                              
  metadata:
    name: backend-api                                                           
  spec:           
    replicas: 1
    selector:
      matchLabels:
        app: backend-api
    template:
      metadata:                                                                 
        labels:
          app: backend-api                                                      
      spec:       
        containers:
          - name: backend-api
            image: aq150/backend-api:latest
            ports:
              - containerPort: 8000                                             
---
apiVersion: v1                                                                
kind: Service   
metadata:
  name: backend-api
spec:
  selector:
    app: backend-api
  ports:
    - port: 8000
      targetPort: 8000
