k8s/frontend.yaml
  apiVersion: apps/v1                                                           
  kind: Deployment                                                              
  metadata:
    name: frontend                                                           
  spec:           
    replicas: 1
    selector:
      matchLabels:
        app: frontend
    template:
      metadata:                                                                 
        labels:
          app: frontend                                                     
      spec:       
        containers:
          - name: frontend
            image: aq150/frontend-nasa:latest
            ports:
              - containerPort: 80                                             

---
apiVersion: v1                                                                
kind: Service   
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
