k8s/ingress.yaml
  apiVersion: networking.k8s.io/v1                                              
  kind: Ingress
  metadata:                                                                     
    name: app-ingress                                                           
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2                           
  spec:           
    rules:
      - http:
          paths:                                                                
            - path: /api(/|$)(.*)
              pathType: ImplementationSpecific                                                  
              backend:
                service:
                  name: backend-api
                  port:                                                         
                    number: 8000
            - path: /                                                           
              pathType: Prefix
              backend:
                service:
                  name: frontend
                  port:                                                         
                    number: 80
